--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.19.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.17.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.37.7"
   }
 }
