--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "databaseproject",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+"scripts": {
+  "start": "node ./bin/www",
+  "dev": "nodemon ./bin/www"
+},
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,5 +19,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.14"
   }
 }
